--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
     "@rails/webpacker": "3.5",
     "aws-sdk": "^2.351.0",
     "babel-preset-react": "~6.24.1",
+    "bootstrap": "^4.1.3",
     "dropzone": "^5.5.1",
     "progressbar.js": "^1.0.1",
     "prop-types": "~15.6.0",
     "react": "~15.4.2",
     "react-audio-spectrum": "0.0.9",
+    "react-bootstrap": "^0.32.4",
+    "react-bootstrap-modal": "^4.2.0",
     "react-dom": "~15.4.2",
     "react-dropzone": "^7.0.1",
+    "react-fontawesome": "^1.6.1",
     "react-router": "~3.2.0",
     "react-router-dom": "^4.3.1",
-    "react-soundplayer": "^1.0.4",
     "redbox-react": "1.6.0"
   },
   "devDependencies": {
