--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-fontawesome": "^1.6.1",
     "react-router": "~3.2.0",
     "react-router-dom": "^4.3.1",
+    "react-simple-dropdown": "^3.2.3",
     "redbox-react": "1.6.0"
   },
   "devDependencies": {
