--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-router": "~3.2.0",
     "react-router-dom": "^4.3.1",
     "react-simple-dropdown": "^3.2.3",
-    "redbox-react": "1.6.0"
+    "reactjs-popup": "^1.3.2",
+    "redbox-react": "1.6.0",
+    "tippy.js": "^3.3.0"
   },
   "devDependencies": {
     "enzyme": "~2.9.1",
