--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prop-types": "~15.6.0",
     "react": "~15.4.2",
     "react-audio-spectrum": "0.0.9",
+    "react-awesome-modal": "^2.0.5",
     "react-bootstrap": "^0.32.4",
     "react-bootstrap-modal": "^4.2.0",
     "react-coverflow": "^0.2.17",
@@ -20,7 +21,6 @@
     "react-router": "~3.2.0",
     "react-router-dom": "^4.3.1",
     "react-simple-dropdown": "^3.2.3",
-    "reactjs-popup": "^1.3.2",
     "redbox-react": "1.6.0",
     "tippy.js": "^3.3.0"
   },
